--- a/index.html
+++ b/index.html
@@ -62,11 +62,13 @@
 			<div class="modal">
 				<h2>Future Planning</h2>
 				<div class="padright padleft">
-					<div class="noselect inline left">Piggy Bank <input type="number" min="0" id="piggybank" tabindex="50"></div>
-					<div class="noselect inline left padleft padbottom">Piggy Level <input type="number" min="1" id="piggylevel" tabindex="51"style="width: 38px"> +<span id="piggybonus">0</span>%</div>
-					<div class="noselect inline left" style="margin-left: 4px">(+<span id="piggybonuscalc">0</span>)</div>
-
-					<button class="right" id="crackpiggy" onclick="crackThePiggy()" tabindex="53">Crack Open (+<span id="piggycracktotal">0</span>)</button>
+					<div class="noselect inline left">Piggy Bank <input type="number" min="0" id="piggybank" tabindex="50" style="width: 78px"></div>
+					<div class="noselect inline left padleft padbottom">Full at: <span id="piggycap">0</span>¹</div>
+					<div class="noselect inline left padleft padbottom">Piggy Level <input type="number" min="1" id="piggylevel" tabindex="51" style="width: 38px"> +<span id="piggybonus">0</span>%</div>
+					<div class="noselect inline left" style="margin-left: 4px">(+<span id="piggybonuscalc">0</span>)²</div>
+				</div>
+				<div class="padright padleft clear">
+					<button class="left" id="crackpiggy" onclick="crackThePiggy()" tabindex="53">Crack Open (+<span id="piggycracktotal">0</span>)</button>
 					<div class="noselect inline right padbottom">Golden Eggs <input type="number" min="0" id="goldeneggs" tabindex="52"></div>
 				</div>
 				<table id="future-table">
@@ -133,8 +135,10 @@
 					</div>
 				</div>
 			</div>
-
-			<h3>Created by Stickly Man!#6756</h3>
+			<h3>¹The formula for when a piggy is full is an esimate and is not confirmed to be accurate.</h3>
+			<h3>²The piggy bonus formula may differ from in-game by a few golden eggs.</h3>
+			<br>
+			<h3>Created by RoyalPhysique (aka Stickly Man!)</h3>
 			<h3>Current as of Egg, Inc. version 1.25. <a href="archives/">Click here</a> for older versions.</h3>
 			<h3><a target="_blank", href="https://wasmegg.netlify.app/">Check out some other useful Egg, Inc. tools</a> made by mk2#4590!</h3>
 		</script>
