--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 				<h2>Future Planning</h2>
 				<div class="padright padleft">
 					<div class="noselect inline left">Piggy Bank <input type="number" min="0" id="piggybank" tabindex="50" style="width: 78px"></div>
-					<div class="noselect inline left padleft padbottom">Full at: <span id="piggycap">0</span>¹</div>
+					<div class="noselect inline left padleft padbottom">¹Full at: <span id="piggycap">0</span></div>
 					<div class="noselect inline left padleft padbottom">Piggy Level <input type="number" min="1" id="piggylevel" tabindex="51" style="width: 38px"> +<span id="piggybonus">0</span>%</div>
-					<div class="noselect inline left" style="margin-left: 4px">(+<span id="piggybonuscalc">0</span>)²</div>
+					<div class="noselect inline left padleft padbottom">²Bonus: +<span id="piggybonuscalc">0</span></div>
 				</div>
 				<div class="padright padleft clear">
 					<button class="left" id="crackpiggy" onclick="crackThePiggy()" tabindex="53">Crack Open (+<span id="piggycracktotal">0</span>)</button>
@@ -135,8 +135,8 @@
 					</div>
 				</div>
 			</div>
-			<h3>¹The formula for when a piggy is full is an esimate and is not confirmed to be accurate.</h3>
-			<h3>²The piggy bonus formula may differ from in-game by a few golden eggs.</h3>
+			<h3>¹The formula for when a piggy is full is not confirmed to be 100% accurate.</h3>
+			<h3>²The piggy bonus amount may differ from in-game by up to a few golden eggs.</h3>
 			<br>
 			<h3>Created by RoyalPhysique (aka Stickly Man!)</h3>
 			<h3>Current as of Egg, Inc. version 1.26.2. <a href="archives/">Click here</a> for older versions.</h3>
