After a few tests, the accuracy looks to be better.

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 				</div>
 			</div>
 			<h3>¹The formula for when a piggy is full is not confirmed to be 100% accurate.</h3>
-			<h3>²The piggy bonus amount may differ from in-game by up to a few golden eggs.</h3>
+			<h3>²The piggy bonus amount may differ from in-game by 1 golden egg.</h3>
 			<br>
 			<h3>Created by RoyalPhysique (aka Stickly Man!)</h3>
 			<h3>Current as of Egg, Inc. version 1.27.1. <a href="archives/">Click here</a> for older versions.</h3>
