--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 					<div class="noselect inline left">Piggy Bank <input type="number" min="0" id="piggybank" tabindex="50" style="width: 78px"></div>
 					<div class="noselect inline left padleft padbottom">¹Full at: <span id="piggycap">0</span></div>
 					<div class="noselect inline left padleft padbottom">Piggy Level <input type="number" min="1" id="piggylevel" tabindex="51" style="width: 38px"> +<span id="piggybonus">0</span>%</div>
-					<div class="noselect inline left padleft padbottom">²Bonus: +<span id="piggybonuscalc">0</span></div>
+					<div class="noselect inline left padleft padbottom">Bonus: +<span id="piggybonuscalc">0</span></div>
 				</div>
 				<div class="padright padleft clear">
 					<button class="left" id="crackpiggy" onclick="crackThePiggy()" tabindex="53">Crack Open (+<span id="piggycracktotal">0</span>)</button>
@@ -136,7 +136,6 @@
 				</div>
 			</div>
 			<h3>¹The formula for when a piggy is full is not confirmed to be 100% accurate.</h3>
-			<h3>²The piggy bonus amount may differ from in-game by 1 golden egg.</h3>
 			<br>
 			<h3>Created by RoyalPhysique (aka Stickly Man!)</h3>
 			<h3>Current as of Egg, Inc. version 1.27.1. <a href="archives/">Click here</a> for older versions.</h3>
